<resources>
    <string name="app_name">studystudymorestudyforever</string>
    <string name="login_title">Nhập thông tin đăng nhập</string>
    <string name="import_email">Nhập email</string>
    <string name="import_pass">Nhập mật khẩu</string>
    <string name="button_login">Đăng nhập</string>
    <string name="signin_title">Trang đăng ký </string>
    <string name="button_forget_password">Quên mật khẩu?</string>

    <!--welcome-->
    <string name="title_welcom">Welcom</string>

    <!--dialogin_layoutogin-->
    <string name="dialog_title">Lỗi</string>
    <string name="dialog_status">Email hoặc mật khẩu không hợp lệ vui lòng kiểm tra lại</string>
    <string name="dialog_button_right">Đồng ý</string>
    <string name="dialog_button_left">Hủy bỏ</string>
   <!-- signin-->
    <string name="sign_title">Trang đăng kí</string>
    <string name="import_pass_signin">Nhập mật khẩu</string>
    <string name="import_pass_again">Nhập lại mật khẩu</string>
    <string name="signin_button">Đăng kí</string>

    <!--nhập mã xác thực-->
    <string name="import_code_title">Nhập mã xác thực</string>
    <string name="import_code_textview">Mã xác thực</string>
    <string name="import_code_button">Xác nhận</string>

    <!--dialog restart pass word-->
    <string name="restart_dialog_view">Email không hợp lệ vui lòng kiểm tra lại</string>

    <!--forget pass word-->
    <string name="forget_title">Quên mật khẩu</string>
    <string name="forget_button">Lấy lại mật khẩu</string>

    <!--Thay đổi mật khẩu-->
    <string name="change_pass_title">Thay đổi mật khẩu</string>
    <string name="change_pass_import_oldpass">Nhập mật khẩu</string>
    <string name="change_pass_import_newpass">Nhập mật khẩu mới</string>
    <string name="change_pass_import_newpass_again">Nhập lại mật khẩu</string>
    <string name="change_pass_button">Thay đổi mật khẩu</string>
    <string name="change_pass_no_pass">Chưa nhận được mật khẩu</string>
    <string name="change_pass_restart_pass">Chúng tôi đã gửi lại mật khẩu cho bạn vui lòng kiểm tra mail</string>


    bottom nagivation view
    <string name="teacher">Giáo viên</string>
    <string name="account">Tài khoản</string>
    <string name="schedule">Lịch học</string>
    <string name="notification">Thông báo</string>
    <string name="chat">Tin nhắn</string>
    <string name="student">Học sinh</string>
    <string name="schedule_teaching">Lịch dạy</string>
    <string name="student_parents">Phụ huynh và học sinh</string>

    fragment account
    <string name="changepass_button">Đổi mật khẩu</string>
    <string name="manage_file_student">Quản lý hồ sơ</string>
    <string name="logout">Đăng xuất</string>
    <string name="no_data">No data</string>

    tiêu để của các fragment
    <string name="schedule_fragment">Lịch học</string>
    
    detail list schedule
    <string name="sche_time">Thời gian</string>
    <string name="sche_name_teacher">Giáo viên</string>
    <string name="sche_address">Địa điểm:</string>
    <string name="sche_time_study">Giờ học</string>
    <string name="sche_status">Tình trạng</string>
    <string name="sche_date_study">Thời gian học:</string>
    <string name="sche_start_time">Ngày bắt đầu:</string>
    <string name="sche_end_time">Ngày kết thúc:</string>

    nhập mã xác thực
    <string name="text_status_import_code">Mã xác thực không hợp lệ vui lòng kiểm tra lại</string>

    cập nhật thông tin cá nhân
    <string name="info_user">Trang thông tin cá nhân</string>
    
    <string name="info_name">Họ tên:</string>
    <string name="info_email">Email:</string>
    <string name="info_age">Ngày sinh:</string>
    <string name="info_phone">Số điện thoại:</string>
    <string name="info_address">Địa chỉ</string>
    <string name="info_button_update_user">Cập nhật thông tin cá nhân</string>

    danh sách hồ sơ học sinh
    <string name="title_file_student">Danh sách hồ sơ</string>
     xem chi tiet giao vien va dang ki hoc
    <string name="title_select_teacher">Trang đăng kí học</string>



    delete
    <string name="title_activity_fold">FoldActivity</string>

    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="num_of_folds">Number Of Folds</string>

    <string name="animate">Animate</string>

    <string name="camera_feed">Camera Feed</string>
    <string name="static_image">Static Image</string>

    <string name="sepia_effect_off">Sepia Off</string>

    <string-array name="num_of_folds_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>1</item>
    </string-array>

    chỉnh sửa và hủy môn học cho giáo viên
    <string name="update_course">Cập nhật môn học</string>
    <string name="delete_course">Xóa môn học</string>
    <string name="add_course">Thêm lịch học</string>

    Gửi thông báo
    <string name="btn_sent_notif">Gửi thông báo</string>

    Đăng xuất
    <string name="title_logout">Đăng xuất</string>
    <string name="content_logout">Bạn có muốn đăng xuất</string>

    Thêm hồ sơ cho phụ huynh
    <string name="title_add_file_student">Thêm hồ sơ học sinh cho phụ huynh</string>

    Chọn hồ sơ
    <string name="titile_set_file">Thay đổi hồ sơ</string>
    <string name="content_set_file">Bạn có muốn thay đổi lịch sang hồ sơ này không?</string>
    <string name="add_student_parent">Thêm phụ huynh và học sinh</string>


</resources>
