<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@drawable/animation_list"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="@drawable/sharp_title_layout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/change_pass_title"
                android:textColor="@color/text_title"
                android:textSize="@dimen/text_size_title"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="8"
            android:paddingTop="40dp"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10"
                android:paddingLeft="@dimen/pading_login"
                android:paddingRight="@dimen/pading_login"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/change_pass_import_oldpass"/>
                <EditText
                    android:id="@+id/edt_oldpass"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_text_login"
                    android:layout_weight="7"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10"
                android:paddingLeft="@dimen/pading_login"
                android:paddingRight="@dimen/pading_login"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/change_pass_import_newpass"/>
                <EditText
                    android:id="@+id/edt_newpass"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_text_login"
                    android:layout_weight="7"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10"
                android:paddingLeft="@dimen/pading_login"
                android:paddingRight="@dimen/pading_login"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/change_pass_import_newpass_again"/>
                <EditText
                    android:id="@+id/edt_newpassagain"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_text_login"
                    android:layout_weight="7"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/tab_button_changepass"
                android:background="@drawable/sharp_button_login">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/changepass_button"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="right"
                android:layout_weight="1"
                android:paddingRight="10dip">
                <LinearLayout
                    android:id="@+id/btn_no_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_title"
                        android:textSize="@dimen/text_size_forgetpass"
                        android:text="@string/change_pass_no_pass"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_changepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</RelativeLayout>