<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/start_sharp_layout"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="@drawable/sharp_title_layout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/import_code_title"
                android:textColor="@color/text_title"
                android:textSize="@dimen/text_size_title"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="9"
            android:paddingTop="40dp"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10"
                android:paddingLeft="@dimen/pading_login"
                android:paddingRight="@dimen/pading_login"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/import_code_textview"/>
                <EditText
                    android:id="@+id/edt_import_code"
                    android:layout_width="0dp"
                    android:textSize="@dimen/text_size_text_login"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:id="@+id/tab_import_code"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/sharp_button_login">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/import_code_button"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_importcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</RelativeLayout>
