<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/sharp_button"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/tab_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_back_btn"/>
                </LinearLayout>
                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_title"
                    android:gravity="center"
                    android:text="@string/info_user"
                    android:textColor="#FFF"/>
            </RelativeLayout>


            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refres_info_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:background="#dee9e1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/hotenEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:background="@drawable/cardview_detail_schedule">
                        <TextView
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:textColor="#000000"
                            android:text="@string/info_name"/>
                        <EditText
                            android:id="@+id/edt_name"
                            android:layout_width="0dp"
                            android:background="@null"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:layout_weight="7"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/emailEdittext"
                        android:layout_width="match_parent"
                        android:layout_below="@+id/hotenEdittext"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:background="@drawable/cardview_detail_schedule"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:textColor="#000000"
                            android:text="@string/info_email"/>
                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:layout_weight="7"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/birthdayEdittext"
                        android:layout_below="@+id/emailEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="20"
                        android:background="@drawable/cardview_detail_schedule"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:textColor="#000000"
                            android:text="@string/info_age"/>
                        <TextView
                            android:id="@+id/tv_age"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:textColor="#000000"
                            android:layout_weight="5"/>
                        <LinearLayout
                            android:id="@+id/tab_set_birthday"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="8"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/icon_select_time"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_below="@+id/birthdayEdittext"
                        android:id="@+id/sodienthoaiEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:background="@drawable/cardview_detail_schedule"
                        android:layout_weight="1">
                        <TextView
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:textColor="#000000"
                            android:text="@string/info_phone"/>
                        <EditText
                            android:id="@+id/edt_phone"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:background="@null"
                            android:layout_weight="7"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_below="@id/sodienthoaiEdittext"
                        android:id="@+id/diachiEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:background="@drawable/cardview_detail_schedule"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:gravity="center"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:textColor="#000000"
                            android:text="@string/info_address"/>
                        <EditText
                            android:id="@+id/edt_address"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:background="@null"
                            android:layout_weight="7"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_alignParentBottom="true"
                        android:id="@+id/tab_change_info_user"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/sharp_button"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/info_button_update_user"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_view_info_user"
                            android:textColor="#FFF"/>
                    </LinearLayout>
            </RelativeLayout>
             </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_changeinfouser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>
