<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@drawable/animation_list"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="@drawable/sharp_button_login">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_login"
                android:textColor="@color/text_title"
                android:textSize="@dimen/text_size_title"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="8"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/import_email"/>
                <EditText
                    android:id="@+id/edt_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_text_login"
                    android:textColor="@color/text_title"
                    android:text="@string/import_pass"/>
                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/tab_button_login"
                android:background="@drawable/sharp_button_login">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/button_login"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/tab_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</RelativeLayout>